RESOLVED FIXED255406
Fix early hints preconnect on some OS versions
https://bugs.webkit.org/show_bug.cgi?id=255406
Summary Fix early hints preconnect on some OS versions
Ben Nham
Reported 2023-04-13 10:23:30 PDT
Early hints preconnect (261079@main) does not work with certain macOS versions since different versions utilize different delegate methods to communicate the 103 Early Hints response. Fix this by implementing the appropriate methods.
Attachments
Ben Nham
Comment 1 2023-04-13 10:23:51 PDT
Ben Nham
Comment 2 2023-04-13 10:27:14 PDT
EWS
Comment 3 2023-04-14 11:52:05 PDT
Committed 262982@main (c04223d43783): <https://commits.webkit.org/262982@main> Reviewed commits have been landed. Closing PR #12669 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.