Fix early hints preconnect on some OS versions https://bugs.webkit.org/show_bug.cgi?id=255406 rdar://107879504

Reviewed by Alex Christensen.

Early hints preconnect (261079@main) does not work with certain macOS versions since different
versions utilize different delegate methods to communicate the 103 Early Hints response. Fix this by
implementing the appropriate methods.

* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:task:_didReceiveInformationalResponse:]):

Canonical link: https://commits.webkit.org/262982@main